working with docker

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -1,10 +1,11 @@
 <html>
   <head>
-    <title>Flask Shop</title>
+    <meta charset='utf-8'>
+    <meta name='viewport' content='width=device-width,initial-scale=1'>
+    <title>Linguistics Framework</title>
     <link rel="stylesheet" href="/static/bundle.css"></link>
   </head>
   <body>
-    <h1>{{message}}</h1>
-    <script src="/static/bundle.js" charset="utf-8"></script>
+    <script defer src="/static/bundle.js" charset="utf-8"></script>
   </body>
 </html>
