--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -5,6 +5,7 @@
     <meta name='viewport' content='width=device-width,initial-scale=1'>
     <title>Linguistics Framework</title>
     <link rel="stylesheet" href="/static/bundle.css"></link>
+    <link rel="stylesheet" href="/static/global.css"></link>
   </head>
   <body>
     <script defer src="/static/bundle.js" charset="utf-8"></script>
