--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset='utf-8'>
-    <meta name='viewport' content='width=device-width,initial-scale=1'>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1,user-scalable=0"/>
     <title>Linguistics Framework</title>
     <link rel="stylesheet" href="/static/bundle.css"></link>
     <link rel="stylesheet" href="/static/global.css"></link>
